# stylus-benchmark

./: Cargo.toml  README.md  stylus-bench-erc20.sh
src/: ed25519_verify_benchmark.rs  erc20_benchmark.rs  lib.rs
