[package]
name = "stylus-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.3.1"
alloy-primitives = "0.3.1"
stylus-sdk = "0.4.1"
wee_alloc = "0.4.5"
stylus-toolkit = { git = "https://github.com/LimeChain/stylus-toolkit.git", branch = "main" }

# [[bin]]
# name = "erc20"
# path = "src/erc20_benchmark.rs"

[[bin]]
name = "ed25519"
path = "src/ed25519_verify_benchmark.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
